--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,14 @@ coverage/
 *.pid
 *.seed
 *.pid.lock
+
+# Ignore specific JSON file
+futEr6crxky587rKdqa8pVraFgEQCwadaYg3sPmxWNA.json
+
+# Alternatively, to ignore all JSON files
+*.json
+
+# If you want to ignore all JSON files except specific ones
+# *.json
+# !package.json
+# !package-lock.json
